--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <main>
         <section>
-            <h2>Welcome to Kayra's Blog</h2>
+            <h2>Welcome to my blog</h2>
             <p>My ideas and studies on math, robotics, and other cool projects!</p>
         </section>
         <!-- Content for your posts will go here -->
