--- a/posts.html
+++ b/posts.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>What's new</h1>
+    <div class="header-container">
+        <h1>Blog Posts</h1> <!-- This is where the title of the posts page appears -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="posts.html">Posts</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="posts.html">Posts</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
+</header>
+
 
     <main>
         <section>
