--- a/posts.html
+++ b/posts.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posts - Kayra's Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="posts.css">
 </head>
 <body>
     <header>
-    <div class="header-container">
-        <h1>Blog Posts</h1> <!-- This is where the title of the posts page appears -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="posts.html">Posts</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
-
+        <div class="header-container">
+            <h1>Blog Posts</h1> <!-- This is where the title of the posts page appears -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="posts.html">Posts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
 
     <main>
         <section>
