--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1><a href="index.html">Kayra's Blog</a></h1>
+            <h1>Kayra's Blog</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
