--- a/posts.html
+++ b/posts.html
@@ -9,27 +9,27 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Blog Posts</h1> <!-- This is where the title of the posts page appears -->
+            <h1>Blog Posts</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="posts.html">Posts</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="posts.html">Posts</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
 
     <main>
         <section>
             <h2>Recent Posts</h2>
-            <article>
-                <h3><a href="post1.html">The first post</a></h3>
-            </article>
-            <!-- More posts can be added here -->
+            <ul class="posts-list">
+                <li>
+                    <a href="post1.html">The Beginning</a>
+                    <p>A review of the history of this blog.</p>
+                </li>
+            </ul>
         </section>
     </main>
-
 </body>
 </html>
